tests/baselines/reference/genericTypeAssertions5.errors.txt
tests/cases/compiler/genericTypeAssertions5.ts(19,5): error TS2322: Type 'A' is not assignable to type 'T'.
tests/cases/compiler/genericTypeAssertions5.ts(20,5): error TS2322: Type 'B' is not assignable to type 'T'.
tests/cases/compiler/genericTypeAssertions5.ts(21,5): error TS2322: Type 'C' is not assignable to type 'T'.
tests/cases/compiler/genericTypeAssertions5.ts(23,9): error TS2352: Type 'B' cannot be converted to type 'T'.
tests/cases/compiler/genericTypeAssertions5.ts(24,9): error TS2352: Type 'C' cannot be converted to type 'T'.


==== tests/cases/compiler/genericTypeAssertions5.ts (5 errors) ====
    interface A {
        foo(): string;
    }
    
    interface B extends A {
        bar(): number;
    }
    
    interface C extends A {
        baz(): number;
    }
    
    var a: A;
    var b: B;
    var c: C;
    
    function foo2<T extends A>(x: T) {
        var y = x;
        y = a; // error: cannot convert A to T
        ~
!!! error TS2322: Type 'A' is not assignable to type 'T'.
        y = b; // error: cannot convert B to T
        ~
!!! error TS2322: Type 'B' is not assignable to type 'T'.
        y = c; // error: cannot convert C to T
        ~
!!! error TS2322: Type 'C' is not assignable to type 'T'.
        y = <T>a;
        y = <T>b; // error: cannot convert B to T
            ~~~~
!!! error TS2352: Type 'B' cannot be converted to type 'T'.
        y = <T>c; // error: cannot convert C to T
            ~~~~
!!! error TS2352: Type 'C' cannot be converted to type 'T'.
    }